<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_layout"
    tools:context=".activity.VerifySimWithMobileNoActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifymobilenumber"
        android:textColor="#000000"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/title_text_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/description"
        android:textColor="#696969"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="17sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <RadioGroup
                android:id="@+id/radiogrp_sims"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp">


                <RadioButton
                    android:id="@+id/radioButton_sim1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:textSize="17sp"/>

                <TableRow
                    android:id="@+id/hr"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginTop="13dp"
                    android:background="#e5e5e5"/>

                <RadioButton
                    android:id="@+id/radioButton_sim2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp" />

                <TableRow
                    android:id="@+id/hr2"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginTop="13dp"
                    android:background="#e5e5e5"/>

            </RadioGroup>

        </RelativeLayout>
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1.0"
            android:stateListAnimator="@null"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/button_next"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressbar_nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/phone_auth_fields"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginBottom="50dp"
            android:layout_alignBottom="@+id/button_start_verification"
            android:indeterminateTint="@color/colorPrimaryDark"/>
    </LinearLayout>

</RelativeLayout>